# sendto-recomposed

./: .gitignore  CMakeLists.txt  readme.md  sendto.c  sendto.manifest  sendto.rc
.github/workflows/: builder.yml
